cucumber/testData/inspections/missedExamples/scenarioOutlineWithMissedExamples.feature
Feature: Test
  <error descr="Examples section is missing">Scenario Outline</error>: Missed Example
    Given I open a RSpec test with text
